Fix the incorrect display of elements on tablets #8

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
 
 body {
     width: 100%;
-    min-height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
@@ -124,15 +124,10 @@ header {
 
 .header-container {
     height: 3em;
-    align-self: center;
-    justify-content: space-between;
-    align-items: center;
     flex-wrap: nowrap;
 }
 
 .header-photo-link {
-    position: absolute;
-    z-index: 2;
     visibility: hidden;
     opacity: 0;
 }
@@ -143,7 +138,6 @@ header {
 }
 
 .header-photo {
-    flex: 0 0 3em;
     width: 3em;
     height: 3em;
 }
@@ -154,12 +148,11 @@ header {
 }
 
 #navbar {
-    flex: 0 1 100%;
+    flex: 0 1 50%;
     height: 3em;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-    gap: 10%;
 }
 
 .nav-link {
@@ -225,13 +218,13 @@ header {
 }
 
 .about-container {
-    gap: 12%;
+    gap: 0;
 }
 
 #about .photo {
-    flex: 0 0 12em;
     width: 12em;
     height: 12em;
+    margin-right: 12%;
 }
 
 .about-person {
@@ -243,7 +236,10 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5%
+}
+
+.skills-title {
+    margin-right: 5%
 }
 
 
@@ -253,23 +249,33 @@ header {
     background-color: #d6ce93;
 }
 
+.projects-container {
+    justify-content: center;
+    align-items: stretch;
+    align-content: space-between;
+    gap: 0;
+    padding: 10px;
+}
+
 .project-tile {
     position: relative;
-    flex: 1 0 31%;
+    flex: 1 0 calc((100% / 3) - 20px);
     min-width: 260px;
-    padding: 0.5em;
+    height: 230px;
     background-color: #ffffff;
     overflow: hidden;
+    margin: 10px;
 }
 
 .project-pic {
     width: 100%;
-    height: 180px;
+    height: 85%;
 }
 
 .project-title {
     text-align: center;
-    margin: 0.5em 0 0;
+    line-height: 1.8;
+    margin: auto;
 }
 
 .project-summary {
@@ -493,10 +499,26 @@ footer .container {
 
 /*  =============== Styles responsive to screen size ===============*/
 
+@media (max-width: 768px) {
+    #about .photo {
+        margin-right: 5%;
+    }
+}
+
 @media (max-width: 600px) {
+    #navbar {
+        flex-basis: 55%;
+    }
     .about-container {
         flex-direction: column;
         justify-content: center;
+    }
+    #about .photo {
+        margin-right: 0;
+    }
+    .project-tile {
+        min-width: 220px;
+        height: 220px;
     }
     .contact-links a {
         width: 3em;
@@ -518,9 +540,12 @@ footer .container {
     }
 }
 
-@media (max-width: 360px) {
-    body {
-        font-size: 14px;
+@media (width: 540px) and (height: 720px) {
+    .project-tile {
+        height: 190px;
+    }
+    .project-title {
+        font-size: 1.05em;
     }
 }
 
@@ -533,6 +558,11 @@ footer .container {
         top: 0;
         left: 0;
         background-color: #9d8189;
+        z-index: 2;
+    }
+    .header-photo {
+        position: absolute;
+        top: 0.5em;
         z-index: 2;
     }
     #navbar {
@@ -590,11 +620,23 @@ footer .container {
     }
 }
 
+@media (max-width: 360px) {
+    body {
+        font-size: 14px;
+    }
+    .project-title {
+        line-height: 2.1;
+    }
+}
+
 @media (max-width: 300px) {
     .container {
         padding: 0 10px;
     }
     .modal-container {
         margin: 0 10px;
+    }
+    .projects-container {
+        padding: 0;
     }
 }
